[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/MediumText.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scenes/PlayerBalance.tscn" type="PackedScene" id=2]
[ext_resource path="res://PlaceholderArt/ChestIcon.png" type="Texture" id=3]
[ext_resource path="res://PlaceholderArt/ShouldersIcon.png" type="Texture" id=4]
[ext_resource path="res://PlaceholderArt/BackIcon.png" type="Texture" id=5]
[ext_resource path="res://PlaceholderArt/AbsIcon.png" type="Texture" id=6]
[ext_resource path="res://PlaceholderArt/HamstringsIcon.png" type="Texture" id=7]
[ext_resource path="res://PlaceholderArt/QuadsIcon.png" type="Texture" id=8]
[ext_resource path="res://Scenes/ActiveExercise.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/SidePanel.gd" type="Script" id=10]
[ext_resource path="res://Fonts/SmallText.tres" type="DynamicFont" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 0.196078 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.27451, 0.27451, 0.27451, 1 )
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[node name="SidePanel" type="Control"]
anchor_right = 0.25
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.470588 )

[node name="VBox_Main" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
grow_horizontal = 0

[node name="Panel" type="Panel" parent="VBox_Main"]
margin_right = 290.0
margin_bottom = 230.0
rect_min_size = Vector2( 0, 230 )
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )

[node name="VBox_PlayerInfo" type="VBoxContainer" parent="VBox_Main/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PlayerBalance" parent="VBox_Main/Panel/VBox_PlayerInfo" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 290.0
margin_bottom = 70.0
rect_min_size = Vector2( 290, 70 )
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="VBox_Main/Panel/VBox_PlayerInfo"]
margin_top = 74.0
margin_right = 290.0
margin_bottom = 78.0

[node name="HBox_1" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo"]
margin_top = 82.0
margin_right = 290.0
margin_bottom = 230.0
size_flags_vertical = 3
alignment = 1

[node name="VBox_Strength1" type="VBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1"]
margin_right = 139.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox_Chest" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1"]
margin_right = 139.0
margin_bottom = 28.0

[node name="Texture_Chest" type="TextureRect" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Chest"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="Label_Chest" type="Label" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Chest"]
margin_left = 32.0
margin_right = 139.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "1"
valign = 1

[node name="HSeparator2" type="HSeparator" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1"]
margin_top = 32.0
margin_right = 139.0
margin_bottom = 52.0
custom_constants/separation = 20

[node name="HBox_Shoulders" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1"]
margin_top = 56.0
margin_right = 139.0
margin_bottom = 84.0
alignment = 1

[node name="Texture_Shoulders" type="TextureRect" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Shoulders"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="Label_Shoulders" type="Label" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Shoulders"]
margin_left = 32.0
margin_right = 139.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 11 )
text = "1"
valign = 1

[node name="HSeparator3" type="HSeparator" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1"]
margin_top = 88.0
margin_right = 139.0
margin_bottom = 108.0
custom_constants/separation = 20

[node name="HBox_Back" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1"]
margin_top = 112.0
margin_right = 139.0
margin_bottom = 140.0

[node name="Texture_Back" type="TextureRect" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Back"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 7

[node name="Label_Back" type="Label" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Back"]
margin_left = 32.0
margin_right = 139.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "1"
valign = 1

[node name="VSeparator" type="VSeparator" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1"]
margin_left = 143.0
margin_right = 147.0
margin_bottom = 148.0

[node name="VBox_Strength2" type="VBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1"]
margin_left = 151.0
margin_right = 290.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBox_Core" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2"]
margin_right = 139.0
margin_bottom = 28.0
alignment = 1

[node name="Texture_Core" type="TextureRect" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Core"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 7

[node name="Label_Core" type="Label" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Core"]
margin_left = 32.0
margin_right = 139.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "1"
valign = 1

[node name="HSeparator4" type="HSeparator" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2"]
margin_top = 32.0
margin_right = 139.0
margin_bottom = 52.0
custom_constants/separation = 20

[node name="HBox_Quadriceps" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2"]
margin_top = 56.0
margin_right = 139.0
margin_bottom = 84.0
alignment = 1

[node name="Texture_Quadriceps" type="TextureRect" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Quadriceps"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 7

[node name="Label_Quadriceps" type="Label" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Quadriceps"]
margin_left = 32.0
margin_right = 139.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "1"
valign = 1

[node name="HSeparator5" type="HSeparator" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2"]
margin_top = 88.0
margin_right = 139.0
margin_bottom = 108.0
custom_constants/separation = 20

[node name="HBox_Hamstrings" type="HBoxContainer" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2"]
margin_top = 112.0
margin_right = 139.0
margin_bottom = 140.0
alignment = 1

[node name="Texture_Hamstrings" type="TextureRect" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Hamstrings"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[node name="Label_Hamstrings" type="Label" parent="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Hamstrings"]
margin_left = 32.0
margin_right = 139.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 11 )
text = "1"
valign = 1

[node name="HSeparator" type="HSeparator" parent="VBox_Main"]
margin_top = 234.0
margin_right = 290.0
margin_bottom = 264.0
custom_constants/separation = 30

[node name="Button_Store" type="Button" parent="VBox_Main"]
margin_top = 268.0
margin_right = 290.0
margin_bottom = 306.0
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Gym Store"

[node name="HSeparator2" type="HSeparator" parent="VBox_Main"]
margin_top = 310.0
margin_right = 290.0
margin_bottom = 340.0
custom_constants/separation = 30

[node name="Panel2" type="Panel" parent="VBox_Main"]
margin_top = 344.0
margin_right = 290.0
margin_bottom = 690.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="ActiveExercise" parent="VBox_Main/Panel2" instance=ExtResource( 9 )]
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel2_Cover" type="Panel" parent="VBox_Main/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="VBox_Main/Panel2/Panel2_Cover"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
text = "No Exercise selected"
align = 1
valign = 1
autowrap = true

[node name="XPDisplayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="mouse_entered" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Chest" to="." method="_on_HBox_Chest_mouse_entered"]
[connection signal="mouse_exited" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Chest" to="." method="_on_HBox_Chest_mouse_exited"]
[connection signal="mouse_entered" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Shoulders" to="." method="_on_HBox_Shoulders_mouse_entered"]
[connection signal="mouse_exited" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Shoulders" to="." method="_on_HBox_Shoulders_mouse_exited"]
[connection signal="mouse_entered" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Back" to="." method="_on_HBox_Back_mouse_entered"]
[connection signal="mouse_exited" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength1/HBox_Back" to="." method="_on_HBox_Back_mouse_exited"]
[connection signal="mouse_entered" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Core" to="." method="_on_HBox_Core_mouse_entered"]
[connection signal="mouse_exited" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Core" to="." method="_on_HBox_Core_mouse_exited"]
[connection signal="mouse_entered" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Quadriceps" to="." method="_on_HBox_Quadriceps_mouse_entered"]
[connection signal="mouse_exited" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Quadriceps" to="." method="_on_HBox_Quadriceps_mouse_exited"]
[connection signal="mouse_entered" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Hamstrings" to="." method="_on_HBox_Hamstrings_mouse_entered"]
[connection signal="mouse_exited" from="VBox_Main/Panel/VBox_PlayerInfo/HBox_1/VBox_Strength2/HBox_Hamstrings" to="." method="_on_HBox_Hamstrings_mouse_exited"]
[connection signal="pressed" from="VBox_Main/Button_Store" to="." method="_on_Button_Store_pressed"]
[connection signal="completed_rep" from="VBox_Main/Panel2/ActiveExercise" to="." method="_on_ActiveExercise_completed_rep"]
[connection signal="timeout" from="XPDisplayTimer" to="." method="_on_XPDisplayTimer_timeout"]
